Move from ruby-lint to jruby-lint
Change-Id: I31a9abe5d7859b1f10566940d3e67f5fc3f1358e

--- a/jenkins/infra.yml
+++ b/jenkins/infra.yml
@@ -200,4 +200,4 @@
     builders:
       - shell: |
           set -x
-          docker rmi "jjb_${deploy}" "ruby_${deploy}" "host_${deploy}" "node_${deploy}"
+          docker rmi "jjb_${deploy}" "ruby_${deploy}" "host_${deploy}" "node_${deploy}" || echo "Some images were not found"
