--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -1,5 +1,5 @@
 FROM abraverm/jenkins:node
 MAINTAINER Alexander Braverman Masis <abraverm@redhat.com>
 
-RUN (yum install -y rubygems || yum install -y rubygems )
-RUN gem install rubocop rubocop-rspec ruby-lint
+RUN (yum install -y jruby ruby || yum install -y jruby ruby)
+RUN gem install rubocop rubocop-rspec jruby-lint
