Move from ruby-lint to jruby-lint
Change-Id: I31a9abe5d7859b1f10566940d3e67f5fc3f1358e

--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -1,5 +1,6 @@
 FROM abraverm/jenkins:node
 MAINTAINER Alexander Braverman Masis <abraverm@redhat.com>
 
-RUN (yum install -y rubygems || yum install -y rubygems )
-RUN gem install rubocop rubocop-rspec ruby-lint
+RUN (yum install -y jruby ruby ruby-devel gcc || \
+yum install -y jruby ruby ruby-devel gcc)
+RUN gem install rubocop rubocop-rspec jruby-lint
