Move from ruby-lint to jruby-lint. And better workaround for build bug.
Build bug: https://github.com/docker/docker/issues/10180

Change-Id: I31a9abe5d7859b1f10566940d3e67f5fc3f1358e

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,6 +1,6 @@
 FROM fedora
-RUN rpm --rebuilddb
-RUN (yum install -y -q wget || yum install -y java-1.8.0-openjdk openssh-server openssh-client git)
+RUN rpm --rebuilddb && \
+yum install -y java-1.8.0-openjdk openssh-server openssh-client git
 # configure ssh
 RUN mkdir /root/.ssh
 RUN chmod 700 /root/.ssh
