--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -1,5 +1,7 @@
 FROM abraverm/jenkins:node
 MAINTAINER Alexander Braverman Masis <abraverm@redhat.com>
 
-RUN (yum install -y rubygems || yum install -y rubygems )
-RUN gem install rubocop rubocop-rspec ruby-lint
+RUN rpm --rebuilddb && yum install -y gcc gnupg which
+RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
+RUN curl -sSL https://get.rvm.io | bash -s stable --ruby=jruby --gems=rubocop,jruby-lint
+RUN echo "source $HOME/.rvm/scripts/rvm" >> ~/.bash_profile
