Move from ruby-lint to jruby-lint. And better workaround for build bug.
Build bug: https://github.com/docker/docker/issues/10180

Change-Id: I31a9abe5d7859b1f10566940d3e67f5fc3f1358e

--- a/jenkins/gates/ruby.yml
+++ b/jenkins/gates/ruby.yml
@@ -61,15 +61,15 @@
             echo "====================="
             echo "Running Code Analysis"
             echo "====================="
-
+            export PATH=$PATH:/usr/local/rvm/bin/
             echo "---------------------"
             echo "Ruby-lint for Logic  "
             echo "---------------------"
-            ruby-lint ./ || exit_code=1
+            rvm jruby do jrlint || exit_code=1
 
             echo "---------------------"
             echo "RuboCop for Semantics"
             echo "---------------------"
-            rubocop --require rubocop-rspec --format html --out "${WORKSPACE}/build/rubocop.html" --rails --fail-level refactor || exit_code=1
+            rvm jruby do rubocop --display-cop-names --format html --out "${WORKSPACE}/build/rubocop.html" --rails --fail-level refactor || exit_code=1
           }
           exit $exit_code
