--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -1,5 +1,6 @@
 FROM abraverm/jenkins:node
 MAINTAINER Alexander Braverman Masis <abraverm@redhat.com>
 
-RUN (yum install -y rubygems || yum install -y rubygems )
-RUN gem install rubocop rubocop-rspec ruby-lint
+RUN (yum install -y ruby ruby-devel gcc rubygem-nokogiri jruby|| \
+yum install -y ruby ruby-devel gcc rubygem-nokogiri jruby)
+RUN gem install rubocop rubocop-rspec jruby-lint
