--- a/docker/jjb/Dockerfile
+++ b/docker/jjb/Dockerfile
@@ -1,3 +1,3 @@
-FROM abraverm/jenkins:docker
+FROM node_test
 MAINTAINER Alexander Braverman Masis <abraverm@redhat.com>
 RUN pip install jenkins-job-builder
