--- a/jenkins/scm.yml
+++ b/jenkins/scm.yml
@@ -3,8 +3,16 @@
     scm:
       - git:
          url: https://review.gerrithub.io/abraverm/logstash-input-bugzilla
-         branches:
-          - origin/ci
          refspec: $GERRIT_REFSPEC
+         branches:
+            - $GERRIT_BRANCH
          choosing-strategy: 'gerrit'
          basedir: "logstash-input-bugzilla_${BUILD_NUMBER}"
+- scm:
+    name: logstash-input-bugzilla-ci
+    scm:
+      - git:
+         url: https://review.gerrithub.io/abraverm/logstash-input-bugzilla
+         branches:
+            - ci
+         basedir: "logstash-input-bugzilla_ci"
