Adding feature for taking kibana snapshots
Change-Id: I6497b7036e5ca4cc7de705669799de426e0a920d
Update: removed shared directory on logstash

--- a/docker/ELK/docker-compose.yml
+++ b/docker/ELK/docker-compose.yml
@@ -5,8 +5,6 @@ logstash:
   command: /bin/bash
   expose:
     - "22"
-  volumes:
-    - /tests/:/tests
 kibana:
   image: bobrik/kibana4
   environment:
@@ -16,7 +14,7 @@ kibana:
   expose:
     - "5601"
 elasticsearch:
-  image: elasticsearch
+  image: elasticsearch:1.5.1
   expose:
     - "9200"
     - "9300"
