Initializining Kibana and taking snapshots
Kibana requires initialization which can be done only (AFAIK) via
Web-UI. For that purpose added Selenium in docker images.
And if using Selenium for automation, it can be used for taking
snapshots.

Change-Id: Iaeeb8346e6fbe7ad0c3be3dfa64dd319d5783cb5

--- a/jenkins/tier3/test_elk.yml
+++ b/jenkins/tier3/test_elk.yml
@@ -24,10 +24,18 @@
           !include-raw ../scripts/elk_start.sh
       - shell:
           !include-raw ../scripts/elk_setup_dns.sh
+      - python:
+          !include-raw ../scripts/kibana_init.py
       - shell:
           !include-raw ../scripts/elk_test.sh
+      - python:
+          !include-raw ../scripts/kibana_discover.py
     publishers:
       - postbuildscript:
           builders:
             - shell:
                 !include-raw ../scripts/elk_cleanup.sh
+      - archive:
+          artifacts: '*.pdf'
+          allow-empty: 'true'
+          fingerprint: true
