Initializining Kibana and taking snapshots
Kibana requires initialization which can be done only (AFAIK) via
Web-UI. For that purpose added Selenium in docker images.
And if using Selenium for automation, it can be used for taking
snapshots.

Change-Id: Iaeeb8346e6fbe7ad0c3be3dfa64dd319d5783cb5

--- a/docker/ELK/docker-compose.yml
+++ b/docker/ELK/docker-compose.yml
@@ -11,7 +11,7 @@ kibana:
     - KIBANA_ES_URL=http://elasticsearch:9200
   links:
     - elasticsearch
-  expose:
+  ports:
     - "5601"
 elasticsearch:
   image: elasticsearch:1.5.1
