ELK Test update to include kibana testing
Change-Id: Ie83b88fffb2a0b5665b45c63511a35df6d63e018

--- a/jenkins/tier3/test_elk.yml
+++ b/jenkins/tier3/test_elk.yml
@@ -14,6 +14,11 @@
     display-name: 'ELK System integration'
     concurrent: true
     node: docker
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+      - string:
+          name: GERRIT_BRANCH
     scm:
       - logstash-input-bugzilla
       - logstash-input-bugzilla-ci
@@ -26,8 +31,16 @@
           !include-raw ../scripts/elk_setup_dns.sh
       - shell:
           !include-raw ../scripts/elk_test.sh
+      - python:
+          !include-raw ../scripts/kibana_init.py
+      - python:
+          !include-raw ../scripts/kibana_discover.py
     publishers:
       - postbuildscript:
           builders:
             - shell:
                 !include-raw ../scripts/elk_cleanup.sh
+      - archive:
+          artifacts: '*.png, *.log'
+          allow-empty: 'true'
+          fingerprint: true
