Continues Deployment - Fedora product
Get all bugs of Fedora

Change-Id: I2d924713d332fa267429e12160da0c08dd8871af

--- a/docker/ELK-deploy/logstash.conf
+++ b/docker/ELK-deploy/logstash.conf
@@ -1,4 +1,11 @@
-input { bugzilla { } }
+input {
+  bugzilla {
+    search_params => {
+      product => Fedora
+    }
+  }
+}
 output {
   elasticsearch { host => elasticsearch }
 }
+
