Moving deployment of Elasticsearch and Kibana to Openshift
https://github.com/ajagnanan/openshift-elasticsearch

Change-Id: Ic119848e24092b0b0f2ac7121340f705add228cb

--- a/docker/ELK-deploy/logstash.conf
+++ b/docker/ELK-deploy/logstash.conf
@@ -6,6 +6,10 @@ input {
   }
 }
 output {
-  elasticsearch { host => elasticsearch }
+  elasticsearch {
+    host => 'kibana-abraverm.rhcloud.com:80/elasticsearch'
+    port => 80
+    protocol => http
+  }
 }
 
