Avoid duplicates in redeployment
The ID of documents in elasticsearch hold the same id as in Bugzilla

Change-Id: I3eceecb898a85541e76041e35b44dbaf90584154

--- a/docker/ELK-deploy/logstash.conf
+++ b/docker/ELK-deploy/logstash.conf
@@ -10,6 +10,7 @@ output {
     host => 'kibana-abraverm.rhcloud.com:80/elasticsearch'
     port => 80
     protocol => http
+    document_id => "%{[message][id]}"
   }
 }
 
